// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overrides className 1`] = `
<Button
  className="base"
>
  I am child
</Button>
`;

exports[`renders as a button with children 1`] = `
<Button
  className="base"
>
  I am child
</Button>
`;

exports[`renders as disabled 1`] = `
<Button
  className="base disabled"
  disabled={true}
>
  I am child
</Button>
`;

exports[`renders as outlined 1`] = `
<Button
  className="base outlined"
>
  I am child
</Button>
`;

exports[`renders as outlined danger 1`] = `
<Button
  className="base outlined danger"
>
  I am child
</Button>
`;
